# read_craft_api

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20231219_052851_create_user_table.rs
migrations/: 20231221064001_create_user_table.up.sql  20231222053953_add_language_enum.up.sql  20231222055218_add_course_table.up.sql  20231222055240_add_course_user_table.down.sql  20231222055240_add_course_user_table.up.sql  20240103073100_create_lesson_table.up.sql  20240110070632_create_book_table.up.sql  20240110070638_create_book_user_table.down.sql  20240110070638_create_book_user_table.up.sql  20240115005839_create_group_table.down.sql  20240115005839_create_group_table.up.sql  20240115005848_create_card_table.up.sql  20240115005859_create_group_user_table.down.sql  20240115005859_create_group_user_table.up.sql
src/: lib.rs  main.rs
src/controllers/: auth.rs  book.rs  card.rs  course.rs  group.rs  image.rs  language.rs  lesson.rs  mod.rs  translator.rs
src/entities/: user.rs
src/extractors/: jwt_cred.rs  mod.rs
src/models/: auth.rs  book.rs  card.rs  course.rs  language.rs  lesson.rs  mod.rs  translator.rs  user.rs
src/repos/: auth.rs  course.rs  lesson.rs  mod.rs
src/services/: book.rs  card.rs  course.rs  lesson.rs  mod.rs  user.rs
src/utils/: jwt.rs
tests/: auth.rs  course.rs  lesson.rs
