[package]
name = "rc-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
actix-cors = "0.6.5"
actix-web = "4"
migration = { path = "migration" }
tokio = { version = "1.34", features = ["full"] }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
env_logger = "0.10.1"
log = "0.4.20"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
jwt-simple = "0.12.1"
bcrypt = "0.15.0"
validator = { version = "0.16", features = ["derive"] }
rust-crypto = "^0.2"
futures-util = "0.3"

[dev-dependencies]
fake = { version = "2.9.1", features = ["derive"] }
