[package]
name = "rc_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.5"
actix-web = "4"
actix-http = "3.4.0"
actix-multipart = "0.6.1"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "chrono",
    "macros",
] }
tokio = { version = "1.34", features = ["full"] }
env_logger = "0.10.1"
log = "0.4.20"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
jwt-simple = "0.12.1"
bcrypt = "0.15.0"
validator = { version = "0.16", features = ["derive"] }
rust-crypto = "^0.2"
futures-util = "0.3"
chrono = { version = "0.4.31", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
epub = "2.1.1"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
fake = { version = "2.9.1", features = ["derive"] }
lazy_static = "1.4.0"
